--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Dyrehaugen Web Notebook" />
 
 
-<meta name="date" content="2021-10-03" />
+<meta name="date" content="2021-11-02" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -212,8 +212,12 @@
 </ul></li>
 <li class="chapter" data-level="17" data-path="policy.html"><a href="policy.html"><i class="fa fa-check"></i><b>17</b> Policy</a>
 <ul>
-<li class="chapter" data-level="17.1" data-path="policy.html"><a href="policy.html#regulations"><i class="fa fa-check"></i><b>17.1</b> Regulations</a></li>
-<li class="chapter" data-level="17.2" data-path="policy.html"><a href="policy.html#carbon-pricing"><i class="fa fa-check"></i><b>17.2</b> Carbon Pricing</a></li>
+<li class="chapter" data-level="17.1" data-path="policy.html"><a href="policy.html#strategy"><i class="fa fa-check"></i><b>17.1</b> Strategy</a>
+<ul>
+<li class="chapter" data-level="17.1.1" data-path="policy.html"><a href="policy.html#vml---voluntary-market-led---fix-fails"><i class="fa fa-check"></i><b>17.1.1</b> VML - Voluntary Market Led - fix fails</a></li>
+</ul></li>
+<li class="chapter" data-level="17.2" data-path="policy.html"><a href="policy.html#regulations"><i class="fa fa-check"></i><b>17.2</b> Regulations</a></li>
+<li class="chapter" data-level="17.3" data-path="policy.html"><a href="policy.html#carbon-pricing"><i class="fa fa-check"></i><b>17.3</b> Carbon Pricing</a></li>
 </ul></li>
 <li class="part"><span><b>I Appendices</b></span></li>
 <li class="appendix"><span><b>Appendices</b></span></li>
@@ -250,7 +254,7 @@
 <div id="header">
 <h1 class="title">Environment</h1>
 <p class="author"><em>Dyrehaugen Web Notebook</em></p>
-<p class="date"><em>2021-10-03</em></p>
+<p class="date"><em>2021-11-02</em></p>
 </div>
 <div id="environment" class="section level1" number="1">
 <h1><span class="header-section-number">1</span> Environment</h1>
